# wishes-testing-cli

./: Cargo.toml  README.md  autocompletion.zsh  testing.bash  testing.zsh
src/: commands.rs  main.rs  runnable.rs
src/commands/: case.rs  generate.rs
